# autosat

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  colors.py  config.py  core.py  cover.py  download.py  dvc.yaml  extract.py  handlers.py  osm_data_extract.py  params.yaml  pyproject.toml  rasterize.py  requirements.in  tile_utils.py
config/: dataset-building.toml
data/: .gitignore
scripts/: handlers.py  prepare_dataset.py  prepare_satellite_data.py
src/: losses.py  metrics.py  training.py  unet.py  utils.py
